fix responsive on iphone 8 and s5 screen

--- a/src/components/css/AboutMe.css
+++ b/src/components/css/AboutMe.css
@@ -95,3 +95,9 @@
         width: 55vw;
     }
 }
+
+@media screen and (max-width: 375px) {
+    .AboutMeTitle {
+        font-size: 1em;
+    }
+}
